--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,4 +28,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: ghcr.io/${{ github.repository_owner }}/alltalk-tts-cuda11.8:latest
+          tags: ghcr.io/${{ github.repository_owner | lower }}/alltalk-tts-cuda11.8:latest
