--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,6 @@
 name: Build and Push Docker Image
-
+env:
+  REPO_OWNER: "roman303"
 on:
   push:
     branches: ["main"]
@@ -28,4 +29,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: ghcr.io/${{ github.repository_owner | lower }}/alltalk-tts-cuda11.8:latest
+          tags: ghcr.io/${{ env.REPO_OWNER | lower }}/alltalk-tts-cuda11.8:latest
