--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,4 +29,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: ghcr.io/${{ env.REPO_OWNER | lower }}/alltalk-tts-cuda11.8:latest
+          tags: ghcr.io/${{ env.REPO_OWNER }}/alltalk-tts-cuda11.8:latest
